--- a/index.html
+++ b/index.html
@@ -8,5 +8,14 @@
 </head>
 <body>
 <h1>Hello, World!</h1>
+<p>Day 1 CodeWorks</p>
+<ul>
+    <li>GIT</li>
+    <Li>Node</Li>
+    <li>npm - node package manger</li>
+    <li>http-server</li>
+    <li>VSCode</li>
+    <li> setup source</li>
+    </ul>
 </body>
 </html>
