--- a/index.html
+++ b/index.html
@@ -11,11 +11,14 @@
 <p>Day 1 CodeWorks</p>
 <ul>
     <li>GIT</li>
+      <p>Git is a free and open source distributed version control system designed to handle everything from small to very large projects with speed and efficiency. </p>
     <Li>Node</Li>
+      <p>Node.js is a platform for building fast and scalable server applications using JavaScript. Node.js is the runtime and NPM is the Package Manager for Node.js modules.</p>
     <li>npm - node package manger</li>
     <li>http-server</li>
     <li>VSCode</li>
     <li> setup source</li>
+    <p>I learned that Jake's is not a fan of PHP which is something like JS.</p>
 </ul>
 </body>
 </html>
