A little more changes.

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
     <li>VSCode</li>
     <li> setup source</li>
     <p>I learned that Jake's is not a fan of PHP which is something like JS.</p>
+    <p>I hope I can hanle the rest of the week.</p>
 </ul>
 </body>
 </html>
