Changing the Title to the perfect Banana Split

--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <title>Document</title>
 </head>
 <body>
-<h1>Hello, World!</h1>
+<h1>The perfect Banana split</h1>
+<hr />
+<h2>Description</h2>
 <p>Day 1 CodeWorks</p>
 <ul>
     <li>GIT</li>
