Added recipe for banana split

--- a/index.html
+++ b/index.html
@@ -8,7 +8,29 @@
 </head>
 <body>
 <h1>The perfect Banana split</h1>
+<p>This banana split is my favorite dessert. It has the perfect balance of Ingredients and looks great when made right.</p>
 <hr />
+<h2>Ingredients</h2>
+<ul>
+  <li>The bowl</li>
+  <li>A Banana</li>
+  <li>3 scoops of ice cream</li>
+  <li>Chocolate syrup</li>
+  <li>Whipped cream</li>
+  <li>A maraschino cherry</li>
+</ul>
+<hr />
+<h2>Directions</h2>
+<ol>
+  <li>Place 3 scoops of ice cream in your bowl</li>
+  <li>Slice a banana in half</li>
+  <li>Place the halves on either side of the ice cream</li>
+  <li>Cover in whipped cream</li>
+  <li>Drizzle chocolate syrup over the top</li>
+  <li>Garnish with a cherry</li>
+  <li>Enjoy the banana split!</li>
+</ol>
+<
 <h2>Description</h2>
 <p>Day 1 CodeWorks</p>
 <ul>
