--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-<h1>The perfect Banana split</h1>
+<h1>The p
+  <img src="https://www.anExampleWebsiteWithImages.net/img/anImage.jpg" height="400px" width="700px alt="">
 <p>This banana split is my favorite dessert. It has the perfect balance of Ingredients and looks great when made right.</p>
 <hr />
 <h2>Ingredients</h2>
