--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Document</title>
 </head>
+
 <body>
-<h1>The p
-  <img src="https://www.anExampleWebsiteWithImages.net/img/anImage.jpg" height="400px" width="700px alt="">
+  <img src="https://www.anExampleWebsiteWithImages.net/img/anImage.jpg" height="400px" width="700px" alt=" Picture of ice cream">
 <p>This banana split is my favorite dessert. It has the perfect balance of Ingredients and looks great when made right.</p>
 <hr/>
 <h2>Ingredients</h2>
