new picture of banana split

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-  <img src="https://www.anExampleWebsiteWithImages.net/img/anImage.jpg" height="100px" width="300px" alt=" Picture of ice cream" />
+  <img src="http://www.madvapes.com/media/catalog/product/cache/1/image/9df78eab33525d08d6e5fb8d27136e95/b/a/banansplit.jpg" height="100px" width="300px" alt=" Picture of ice cream" />
 <p>This banana split is my favorite dessert. It has the perfect balance of Ingredients and looks great when made right.</p>
 <hr/>
 <h2>Ingredients</h2>
